--- a/index.html
+++ b/index.html
@@ -2,50 +2,97 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Custom TimeGuessr</title>
+  <title>MOMGUESSR</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-
   <!-- Leaflet CSS -->
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css"
   />
-
   <style>
-    body { margin:0; font:16px/1.5 sans-serif; }
+    body { margin:0; font:16px/1.5 sans-serif; background:#f0ede3; }
+
+    /* SPLASH */
+    #splash {
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      height:100vh;
+      background:#f0ede3;
+    }
+    #splash h1 {
+      font-size:4rem;
+      color:#d64541;
+      margin:0 0 1rem;
+      letter-spacing:0.1em;
+    }
+    #splash button {
+      padding:1rem 2rem;
+      font-size:1.25rem;
+      background:#d64541;
+      color:white;
+      border:none;
+      border-radius:4px;
+      cursor:pointer;
+    }
+
+    /* PHOTO */
     #photo {
       display: block;
-      margin: 0 auto;
+      margin: 1rem auto;
       max-height: 300px;
       width: auto;
       max-width: 100%;
+      border: 4px solid #ccc;
+      border-radius: 4px;
     }
+
+    /* MAP */
     #map { height: 400px; }
+
+    /* CONTROLS & FEEDBACK */
     #controls, #feedback {
       padding: 1em;
       display: flex;
       flex-direction: column;
       gap: 0.5em;
-      align-items: flex-start;
     }
     #controls { flex-direction: row; align-items: center; }
-    #slider { flex: 1; }
-    #feedback { border-top: 1px solid #ddd; background: #fafafa; }
-    #feedback p { margin: 0.25em 0; }
-    #feedback button { align-self: flex-end; padding: 0.5em 1em; }
-    #results { padding: 1em; }
+    #slider { flex:1; }
+    #feedback { border-top:1px solid #ddd; background:#fff; }
+    #feedback p { margin:0.25em 0; }
+    #feedback button {
+      align-self:flex-end;
+      padding:0.5em 1em;
+      background:#d64541;
+      color:white;
+      border:none;
+      border-radius:4px;
+      cursor:pointer;
+    }
+
+    /* RESULTS */
+    #results { padding:1em; }
     table { width:100%; border-collapse:collapse; margin-top:1em; }
     th,td { border:1px solid #ccc; padding:0.5em; text-align:center; }
   </style>
 </head>
 <body>
 
-  <div id="game">
+  <!-- SPLASH -->
+  <div id="splash">
+    <h1>MOMGUESSR</h1>
+    <button id="playBtn">Play</button>
+  </div>
+
+  <!-- GAME -->
+  <div id="game" style="display:none;">
     <img id="photo" alt="Round image">
     <div id="map"></div>
 
     <div id="controls">
-      <label>Year: <span id="yearDisplay"></span></label>
+      <label>Year: <span id="yearDisplay">1900</span></label>
       <input type="range" id="slider" min="1900" max="2025" />
       <button id="guessButton">Make Guess</button>
     </div>
@@ -56,6 +103,7 @@
     </div>
   </div>
 
+  <!-- FINAL RESULTS -->
   <div id="results" style="display:none;">
     <h2>Your Score</h2>
     <table>
@@ -71,102 +119,111 @@
     </table>
   </div>
 
+  <!-- Leaflet JS -->
   <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    // —— GLOBALS ——
+    // GLOBALS
     let map, guessMarker, correctMarker, connectionLine;
-
-    // —— CONFIG ——
     const MAX_ROUNDS = 5;
     const YEAR_MIN = 1900, YEAR_MAX = 2025;
     const EARTH_HALF_CIRC = 20037.5; // km
-
-    // —— STATE ——
     let allPhotos = [], gamePhotos = [], current = 0, rounds = [];
 
-    // —— UI NODES ——
-    const photoEl      = document.getElementById('photo');
-    const slider       = document.getElementById('slider');
-    const yearDisp     = document.getElementById('yearDisplay');
-    const guessBtn     = document.getElementById('guessButton');
-    const controlsDiv  = document.getElementById('controls');
-    const feedbackDiv  = document.getElementById('feedback');
-    const feedbackMsg  = document.getElementById('feedbackMessage');
-    const nextBtn      = document.getElementById('nextRoundBtn');
-    const gameDiv      = document.getElementById('game');
-    const resultsDiv   = document.getElementById('results');
-    const resultsBody  = document.getElementById('resultsBody');
-    const totalScoreEl = document.getElementById('totalScore');
+    // UI NODES
+    const splashDiv   = document.getElementById('splash');
+    const playBtn     = document.getElementById('playBtn');
+    const gameDiv     = document.getElementById('game');
+    const photoEl     = document.getElementById('photo');
+    const mapEl       = document.getElementById('map');
+    const slider      = document.getElementById('slider');
+    const yearDisp    = document.getElementById('yearDisplay');
+    const guessBtn    = document.getElementById('guessButton');
+    const feedbackDiv = document.getElementById('feedback');
+    const feedbackMsg = document.getElementById('feedbackMessage');
+    const nextBtn     = document.getElementById('nextRoundBtn');
+    const resultsDiv  = document.getElementById('results');
+    const resultsBody = document.getElementById('resultsBody');
+    const totalScoreE = document.getElementById('totalScore');
 
-    // —— SLIDER SETUP ——
+    // SLIDER SETUP
     slider.min = YEAR_MIN;
     slider.max = YEAR_MAX;
-    slider.addEventListener('input', () => {
+    slider.addEventListener('input', ()=> {
       yearDisp.textContent = slider.value;
     });
 
-    // —— FETCH PHOTOS + START ——
+    // LOAD PHOTOS
     fetch('photos.json')
-      .then(r => r.json())
-      .then(arr => { allPhotos = arr; startGame(); })
-      .catch(_ => alert('Could not load photos.json'));
+      .then(r=>r.json())
+      .then(arr=> allPhotos = arr)
+      .catch(_=> alert('Could not load photos.json'));
 
-    // —— GAME FLOW ——
+    // PLAY BUTTON
+    playBtn.addEventListener('click', ()=>{
+      splashDiv.style.display = 'none';
+      gameDiv.style.display   = 'block';
+      startGame();
+    });
+
+    // START MATCH
     function startGame() {
-      gamePhotos = shuffle(allPhotos).slice(0, MAX_ROUNDS);
+      gamePhotos = shuffle(allPhotos).slice(0,MAX_ROUNDS);
       current = 0; rounds = [];
       nextRound();
     }
 
+    // NEXT ROUND
     function nextRound() {
-      // clear any old feedback & map artifacts
+      // clear feedback & old map artifacts
       feedbackDiv.style.display = 'none';
-      if (guessMarker) { guessMarker.remove(); guessMarker = null; }
-      if (correctMarker) { correctMarker.remove(); correctMarker = null; }
-      if (connectionLine) { connectionLine.remove(); connectionLine = null; }
+      if(guessMarker)   { guessMarker.remove();   guessMarker = null; }
+      if(correctMarker) { correctMarker.remove(); correctMarker = null; }
+      if(connectionLine){ connectionLine.remove();connectionLine = null;}
 
-      // end of match?
-      if (current >= gamePhotos.length) {
-        return showResults();
-      }
+      // end?
+      if(current >= gamePhotos.length) return showResults();
 
-      // set up new round
-      const photo = gamePhotos[current];
-      photoEl.src = photo.src;
+      // show image
+      const p = gamePhotos[current];
+      photoEl.src = p.src;
 
       // reset slider
-      const mid = Math.floor((YEAR_MIN + YEAR_MAX)/2);
+      const mid = Math.floor((YEAR_MIN+YEAR_MAX)/2);
       slider.value = mid; yearDisp.textContent = mid;
 
       // reset map
-      if (map) map.remove();
-      map = L.map('map').setView([0,0],2);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        maxZoom: 19
+      if(map) map.remove();
+      map = L.map(mapEl).setView([0,0],2);
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+        maxZoom:19
       }).addTo(map);
 
-      // allow marker placement/movement
-      map.on('click', e => {
-        if (guessMarker) {
+      // place/move guess marker
+      map.on('click', e=>{
+        if(guessMarker) {
           guessMarker.setLatLng(e.latlng);
         } else {
-          guessMarker = L.marker(e.latlng).addTo(map);
+          guessMarker = L.circleMarker(e.latlng,{
+            color:'black', fillColor:'black', fillOpacity:1, radius:8
+          }).addTo(map).bindPopup('Your guess').openPopup();
         }
         map.userLatLng = e.latlng;
-        guessMarker.bindPopup('Your guess').openPopup();
       });
 
-      // enable controls
+      // re-enable controls
       slider.disabled = false;
       guessBtn.disabled = false;
     }
 
-    // —— GUESS button ——
-    guessBtn.addEventListener('click', () => {
-      if (!map || !map.userLatLng) {
+    // MAKE GUESS
+    guessBtn.addEventListener('click', ()=>{
+      if(!map || !map.userLatLng) {
         return alert('Click the map first to set your guess.');
       }
-      // disable further guessing until next round
+      // disable further clicking
+      map.off('click');
+
+      // disable controls
       slider.disabled = true;
       guessBtn.disabled = true;
 
@@ -176,11 +233,12 @@
       const distMi = (distKm * 0.621371).toFixed(1);
       const errY   = Math.abs(slider.value - p.year);
 
-      const sDist  = Math.max(0, Math.round((1 - distKm/EARTH_HALF_CIRC)*5000));
-      const sYear  = Math.max(0, Math.round((1 - errY/(YEAR_MAX-YEAR_MIN))*5000));
+      const sDist  = Math.max(0,
+        Math.round((1 - distKm/EARTH_HALF_CIRC)*5000));
+      const sYear  = Math.max(0,
+        Math.round((1 - errY/(YEAR_MAX-YEAR_MIN))*5000));
       const roundScore = sDist + sYear;
 
-      // store for final tally
       rounds.push({
         round: current+1,
         distKm: distKm.toFixed(1),
@@ -188,37 +246,41 @@
         score: roundScore
       });
 
-      // show correct marker
-      correctMarker = L.marker([p.lat,p.lng]).addTo(map)
-        .bindPopup('Location').openPopup();
+      // correct marker
+      correctMarker = L.circleMarker([p.lat,p.lng],{
+        color:'red', fillColor:'red', fillOpacity:1, radius:8
+      }).addTo(map).bindPopup('Location').openPopup();
 
-      // draw connecting line
+      // line
       connectionLine = L.polyline(
         [gl, [p.lat,p.lng]],
         { color:'red', dashArray:'5,5' }
       ).addTo(map);
 
-      // show feedback text
+      // feedback
       feedbackMsg.innerHTML = `
         <p>Your guess was <strong>${distMi} miles</strong> from the correct location.</p>
         <p>You were <strong>${errY} years</strong> off.</p>
-        <p>Points earned — Location: <strong>${sDist}</strong>/5000, Year: <strong>${sYear}</strong>/5000, Total: <strong>${roundScore}</strong>/10000.</p>
+        <p>Points — Location: <strong>${sDist}</strong>/5000,
+           Year: <strong>${sYear}</strong>/5000,
+           Total: <strong>${roundScore}</strong>/10000.
+        </p>
       `;
       feedbackDiv.style.display = 'block';
     });
 
-    // —— Next Round button ——
-    nextBtn.addEventListener('click', () => {
+    // NEXT ROUND BUTTON
+    nextBtn.addEventListener('click', ()=>{
       current++;
       nextRound();
     });
 
-    // —— SHOW FINAL RESULTS ——
+    // FINAL RESULTS
     function showResults() {
-      gameDiv.style.display = 'none';
+      gameDiv.style.display    = 'none';
       resultsDiv.style.display = 'block';
       let total = 0;
-      rounds.forEach(r => {
+      rounds.forEach(r=>{
         const tr = document.createElement('tr');
         tr.innerHTML = `
           <td>${r.round}</td>
@@ -229,15 +291,16 @@
         resultsBody.appendChild(tr);
         total += r.score;
       });
-      totalScoreEl.textContent = total;
+      totalScoreE.textContent = total;
     }
 
-    // —— UTILITIES ——
+    // UTILITIES
     function shuffle(a){ return a.sort(()=>0.5-Math.random()); }
     function haversine(lat1,lng1,lat2,lng2){
       const R=6371, toRad=Math.PI/180;
       const dLat=(lat2-lat1)*toRad, dLng=(lng2-lng1)*toRad;
-      const h=Math.sin(dLat/2)**2 + Math.cos(lat1*toRad)*Math.cos(lat2*toRad)*Math.sin(dLng/2)**2;
+      const h=Math.sin(dLat/2)**2 +
+              Math.cos(lat1*toRad)*Math.cos(lat2*toRad)*Math.sin(dLng/2)**2;
       return 2*R*Math.asin(Math.sqrt(h));
     }
   </script>
